--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML y CSS esecial</title>
+    <title>HTML y CSS esencial</title>
   </head>
   <body>
     <section class="esencial">
@@ -16,12 +16,13 @@
       </p>
     </section>
     <section class="setup">
-      <h2>setup</h2>
+      <h2>Setup</h2>
       <article class="google">
         <img
           src="./assets/iconos/google_chrome.png"
           class="img_google"
           alt="logo de google"
+          title="Icono de Google Chorme"
         />
         <h3>Google Chrome</h3>
         <p>
@@ -33,8 +34,9 @@
       <article class="visual">
         <img
           src="./assets/iconos/visual_studio code.png"
-          class="visual"
+          class="img_visual"
           alt="logo de visual studio code"
+          title="Icono de visual studio code"
         />
         <h3>Visual Studio Code</h3>
         <p>
@@ -47,8 +49,9 @@
       <article class="figma">
         <img
           src="./assets/iconos/figma.png"
-          class="figma"
+          class="img_figma"
           alt="logo de figma"
+          title="Icono de figma"
         />
         <h3>Figma</h3>
         <p>
@@ -57,13 +60,14 @@
           porque puede ser usado directamente desde el navegador.
         </p>
       </article>
-      <article class="Githut">
+      <article class="Github">
         <img
           src="./assets/iconos/github.png"
-          class="GitHut"
-          alt="logo de GitHut"
+          class="img_github"
+          alt="Logo de GitHub"
+          title="Icono de github"
         />
-        <h3>GitHut</h3>
+        <h3>GitHub</h3>
         <p>
           Así como en Facebook te encuentran tus amigos, en Github te encuentran
           otras programadoras y programadores de todo el mundo, en vez de subir
